modify client id

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,8 +42,8 @@
               owner: 'cyningsun',
               repo: 'blog_comment',
               oauth: {
-                client_id: '40f315f8e57ef8d9e004',
-                client_secret: 'ff1b1611ba32d4577562d70288aeb6ec69f194da',
+                client_id: 'b8ff5ed1956f484a7a1f',
+                client_secret: 'c540e05bc03d3cfbe6118be320578d3c14187d49',
               },
             })
             gitment.render('container')
@@ -56,7 +56,7 @@
 			<span id="busuanzi_container_page_pv">
 				本文总阅读量<span id="busuanzi_value_page_pv"></span>次
 			</span>
-			<p><a href="http://cyningsun.github.io">GitHub Pages</a></p>
+			<p><a href="https://cyningsun.github.io">GitHub Pages</a></p>
 		</footer>
 	</body>
 	
