--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,8 +26,10 @@
       #fork{ display:none; }
     }
   </style>
-<!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
- HTML5 shim, for IE6-8 support of HTML5 elements -->
+   <link href="{{ site.baseurl }}/public/css/iconfont.css" rel="stylesheet">
+
+<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif] d-->
