--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,7 +14,6 @@
             <ul class="nav navbar-nav">
             <li><a href="{{ site.baseurl }}/list.html">List</a></li>
             <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
-            <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
             <li><a href="{{ site.baseurl }}/about.html">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -28,14 +27,13 @@
     <hr />
     <li><a href="{{ site.baseurl }}/list.html">List</a></li>
     <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
-    <li><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
     <li><a href="{{ site.baseurl }}/about.html">About</a></li>
     <hr />
     <div id="social-wrapper">
-      <li> <a href="{{ site.twitter }}"><i class="fa fa-twitter-square"></i> @twitter</a></li>
-      <li> <a href="{{ site.linkedin }}"><i class="fa fa-linkedin-square"></i> linkedin</a> </li>
-      <li> <a href="{{ site.facebook }}"><i class="fa fa-facebook-square"></i> facebook</a></li>
-      <li> <a href="{{ site.github }}"><i class="fa fa-github-square"></i> github</a> </li>
+      <li> <a href="{{ site.weibo }}"  target="_blank"><i class="iconfont icon-weibo"></i> @Weibo</a></li>
+      <li> <a href="{{ site.gmail }}" ><i class="iconfont icon-gmail"></i> Gmail</a> </li>
+      <li> <a href="{{ site.douban }}" target="_blank"><i class="iconfont icon-douban"></i> Douban</a></li>
+      <li> <a href="{{ site.github }}" target="_blank"><i class="iconfont icon-github"></i> Github</a> </li>
     </div>
   </ul>
 </div>
