--- a/public/css/hc.css
+++ b/public/css/hc.css
@@ -392,13 +392,33 @@ time
   color:#4d4d4d;
   box-shadow:1px 1px 0 1px #fafafa;
   padding:10% 10%;
-
 }
 
 .recent-posts h1
 {
   padding-bottom:10px;
-  font-size:1.6em
+  font-size:2em;
+  line-height: 1.35;
+}
+
+.recent-posts h4
+{
+  line-height: 1.5;
+}
+
+.badge {
+  display: inline-block;
+  min-width: 10px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  background-color: #999;
+  border-radius: 10px;
 }
 
 /*------------------------------------*/
@@ -515,9 +535,46 @@ time
 }
 
 /*---------*/
-.pager li > a,.pager li > span
-{
-  border-radius:.5em
+
+
+.typo  .pager {
+    margin-left: 0px;
+  padding-left: 0;
+  margin: 20px 0px;
+  text-align: center;
+  list-style: none;
+  display: block;
+  font-size: 14px;
+}
+
+.pager:before, .pager:after {
+  display: table;
+  content: " ";
+}
+
+.pager:after {
+  clear: both;
+}
+
+
+.pager li {
+  display: inline;
+}
+
+.pager .previous>a, .pager .previous>span {
+  float: left;
+}
+
+.pager .next>a, .pager .next>span {
+  float: right;
+}
+
+.pager li>a, .pager li>span {
+  display: inline-block;
+  padding: 5px 14px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: .5em;
 }
 
 /*------------*/
