--- a/public/css/hc.css
+++ b/public/css/hc.css
@@ -358,17 +358,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*---------------------------*/
+body {
+  color: #2c3e50;
+  background-color: #f0f0f0;
+  width: 100%;
+  border-top: solid #d90006;
+  border-width: 4px;
+}
+
 #wrapper
 {
-  padding-left:160px;
+  padding-left:250px;
   transition:all .5s ease 0;
+  display: block;
 }
 
 .container
 {
-  width:60%;
-  padding-left:200px;
+  width:70%;
+  padding-right:0px;
   padding-top:30px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container a
@@ -434,8 +446,10 @@ time
   z-index:1000;
   border-top:solid #d90006;
   transition:all .4s ease 0;
+  margin-top: -4px;
   border-width:4px;
   padding-top: 100px;
+  display: block;
 }
 
 .sidebar-nav
@@ -491,6 +505,12 @@ time
 }
 
 /*--------------------*/
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  /* box-sizing: border-box; */
+}
+
 .navbar 
 {
   display: none;
@@ -580,14 +600,6 @@ time
 /*------------*/
 
 @media (max-width:767px) {
-  body
-  {
-    color:#2c3e50;
-    background-color:#f0f0f0;
-    width:100%;
-    border-top:solid #d90006;
-    border-width:4px
-  }
   #wrapper {
     padding-left: 0;
     padding-top: 20px;
