--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,10 @@
 <link rel="shortcut icon" href="{{ site.url }}/public/images/favicon.ico">
 <style>
     html{ background:#eee; }
+    .post {
+      white-space:pre-wrap;
+      word-wrap:break-word;
+    }
     pre{white-space:pre-wrap;}
 
    em{ text-transform:lowercase; color:#1abc9c; }
