update style and remove old file

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,3 +6,8 @@
     <a href="http://cyningsun.github.io">GitHub Pages</a></p>
   </footer>
 </div>
+<script type="text/javascript">
+  $(document).ready(function() {
+      $('#toc').toc();
+  });
+  </script>
