fix mobile adjust

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,10 @@
     #tagline{ color:#999; font-size:1em; margin:-2em 0 2em; padding-bottom:2em; border-bottom:3px double #eee; }
     #table{ margin-bottom:2em; color:#888; }
 
+    a,code {
+      word-break:break-all;
+    }
+
     @media only screen and (max-width: 640px) {
       table{ word-break:break-all;word-wrap:break-word;font-size:12px; }
       .typo table th, .typo table td, .typo-table th, .typo-table td .typo table caption {
