--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,17 +1,20 @@
 			<!-- Comment BEGIN -->
       <div id="container"></div>
-      <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-      <script src="https://www.wenjunjiang.win/js/gitment.js"></script>
+      <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+      <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
       <script>
-      var gitment = new Gitment({
-        id: '{{ page.date }}',
+      var gitalk = new Gitalk({
+        clientID: 'b8ff5ed1956f484a7a1f',
+        clientSecret: 'c540e05bc03d3cfbe6118be320578d3c14187d49',
         owner: 'cyningsun',
         repo: 'blog_comment',
-        oauth: {
-          client_id: 'b8ff5ed1956f484a7a1f',
-          client_secret: 'c540e05bc03d3cfbe6118be320578d3c14187d49',
-        },
+        admin: ['GitHub repo owner and collaborators, only these guys can initialize github issues'],
+        id: '{{ page.date }}',
+        distractionFreeMode: true  // Facebook-like distraction free mode
       })
-      gitment.render('container')
+
+      gitalk.render('container')
       </script>
+
+
 <!-- Comment END -->
