--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -8,7 +8,7 @@
         clientSecret: 'c540e05bc03d3cfbe6118be320578d3c14187d49',
         owner: 'cyningsun',
         repo: 'blog_comment',
-        admin: ['GitHub repo owner and collaborators, only these guys can initialize github issues'],
+        admin: ['cyningsun'],
         id: '{{ page.date }}',
         distractionFreeMode: true  // Facebook-like distraction free mode
       })
