--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -34,6 +34,7 @@
       <li> <a href="{{ site.gmail }}" ><i class="iconfont icon-gmail"></i> Gmail</a> </li>
       <li> <a href="{{ site.douban }}" target="_blank"><i class="iconfont icon-douban"></i> Douban</a></li>
       <li> <a href="{{ site.github }}" target="_blank"><i class="iconfont icon-github"></i> Github</a> </li>
+      <li><a href="{{ site.baseurl }}/feed.xml" target="_blank"><i class="iconfont icon-rss"></i> RSS</a></li>
     </div>
   </ul>
 </div>
