--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -26,6 +26,7 @@
     <li class="sidebar-brand"><a href="{{ site.baseurl }}/"><h1 class="brand">{{ site.name }}</h1></a><h3>{{ site.description }}</h3></li>
     <hr />
     <li><a href="{{ site.baseurl }}/list.html">List</a></li>
+    <li><a href="{{ site.baseurl }}/subjects.html">Subjects</a></li>
     <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
     <li><a href="{{ site.baseurl }}/about.html">About</a></li>
     <hr />
